--- a/index.html
+++ b/index.html
@@ -9,15 +9,33 @@
     <h1>FEYZANUR ŞENER</h1>
     <h3>HAKKIMDA</h3>
     <p>Ben Feyza, Bilgisayar Mühendisliği 4.sınf öğrencisiyim. Bu sıralar web geliştirme ile ilgileniyorum.</p>
-    <h4>En Sevdiğim Kitaplar</h4>
-    <ul>
-        <li>Yolların Başlangıcı-Amin Maalouf</li>
-        <li>Cebelavi Sokağı'nın Çocukları-Necib Mahfuz</li>
-        <li>Tatar Çölü-Dino Buzzati</li>
-        <li>Antika Titanik-Murat Menteş</li>
-        <li>Cehenneme Övgü-Gündüz Vassaf</li>
-    </ul>
-
+    <h4>Farklı Alanlardaki Favorilerim</h4>
+    <ol>
+        <li>Favori Filmlerim</li>
+        <ul style="list-style-type:square;">
+            <li>Everything everywhere all at once</li>
+            <li>Seven Life</li>
+            <li><a href="https://www.imdb.com/title/tt5022702/">Hush</a></li>
+        </ul>
+        <br>
+        <li>Favori Kitaplarım</li>
+        <ul style="list-style-type:square;">
+            <li>Yolların Başlangıcı-Amin Maalouf</li>
+            <li>Cehenneme Övgü-Gündüz Vassaf</li>
+            <li><a href="https://books.google.com.tr/books/about/Simyac%C4%B1.html?id=PIEyCgAAQBAJ&redir_esc=y">Simyacı-Paulo Coelho</a></li>
+        </ul>
+        <br>
+        <li>Favori Ülkelerim</li>
+        <ul style="list-style-type:square;">
+            <li>İngiltere</li>
+            <li>İran</li>
+            <li>İtalya</li>
+        </ul>
+        <br>
+       <img src="village.jpg" alt="italy" width="300" height="190">
+       <p>İtalya'dan bir fotoğraf karesi</p>
+        
+  
 </body>
 </html>
 
